[gd_scene load_steps=7 format=3 uid="uid://da770ns8s8rio"]

[ext_resource type="Script" path="res://UI/discard_pile.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://c6k7f1lp0dww3" path="res://Art/Card Shadow Small.png" id="2"]
[ext_resource type="Texture2D" uid="uid://ckkvkeyadwn41" path="res://Art/Card Back Purple Small.png" id="3"]
[ext_resource type="Texture2D" uid="uid://cmypndc2sx558" path="res://Art/Card Stack Small.png" id="4"]

[sub_resource type="InputEventKey" id="InputEventKey_6wdw8"]
device = -1
keycode = 68
unicode = 100

[sub_resource type="Shortcut" id="Shortcut_hfgke"]
events = [SubResource("InputEventKey_6wdw8")]

[node name="Discard Pile" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -114.0
offset_top = -156.0
offset_right = 54.0
offset_bottom = 162.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(114, 336)
size_flags_vertical = 8
script = ExtResource("1")

[node name="Shadow" type="TextureRect" parent="."]
self_modulate = Color(1, 1, 1, 0.572549)
layout_mode = 0
offset_top = 78.0
offset_right = 168.0
offset_bottom = 318.0
texture = ExtResource("2")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = -66
alignment = 2

[node name="Card Back" type="TextureRect" parent="VBoxContainer"]
z_index = 1
layout_mode = 2
texture = ExtResource("3")
stretch_mode = 2

[node name="Button" type="TextureButton" parent="VBoxContainer/Card Back"]
z_index = 1
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -84.0
offset_top = -240.0
offset_right = 84.0
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(84, 160)
shortcut = SubResource("Shortcut_hfgke")
texture_normal = ExtResource("3")
texture_pressed = ExtResource("3")
texture_hover = ExtResource("3")

[node name="Stack" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
mouse_filter = 2
texture = ExtResource("4")
stretch_mode = 2

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = -108.0
offset_top = 258.0
offset_bottom = 331.0
size_flags_vertical = 8
theme_override_colors/font_color = Color(0.968627, 1, 0.972549, 1)
theme_override_colors/font_shadow_color = Color(0.054902, 0.0666667, 0.0627451, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_font_sizes/font_size = 72
text = "0"
horizontal_alignment = 2

[connection signal="mouse_entered" from="VBoxContainer/Card Back/Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/Card Back/Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/Card Back/Button" to="." method="_on_button_pressed"]
